# rust_ebpf

./: Cargo.toml  README.md
myapp/: Cargo.toml
myapp-common/: Cargo.toml
myapp-common/src/: lib.rs
myapp-ebpf/: Cargo.toml  rust-toolchain.toml
myapp-ebpf/src/: binding.rs  main.rs  vmlinux.rs
myapp/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  main.rs  run.rs
